--- a/relinksys/web/src/app/po/supplier-po/supplier-po.component.html
+++ b/relinksys/web/src/app/po/supplier-po/supplier-po.component.html
@@ -299,8 +299,10 @@
                                             <td>{{v.MRDNo}}</td>
                                             <td>{{v.CustomerName}}</td>
                                             <td>{{v.MobileNo1}}</td>
-                                            <td>{{dateFormat(v.InvoiceDate)}}</td>
-                                            <td>{{dateFormat(v.InvoiceDate)}}</td>
+                                            <td>
+                                                 {{ isValidDate(v.InvoiceDate) ? dateFormat(v.InvoiceDate) : '' }}
+                                            </td>
+                                            <td>{{dateFormat(v.DeliveryDate)}}</td>
                                             <td>{{v.InvoiceNo}}</td>
                                             <td>{{v.ProductName}}</td>
                                             <td>{{v.Quantity}}</td>
