--- a/relinksys/api/views/barcode.ejs
+++ b/relinksys/api/views/barcode.ejs
@@ -100,7 +100,7 @@
             <%}%>
 
             <% if (data.CompanyBarcode == 1) {%> 
-            <table style="margin-left: -10px; margin-top: -9px;  zoom: 80% !important; ">
+            <!-- <table style="margin-left: -10px; margin-top: -9px;  zoom: 80% !important; ">
  
                 <tr>
                     <th  style="width: 140px; padding: 0;">
@@ -140,7 +140,8 @@
                               <% if (data.CompanyID !== 2){%>
                                 (Inc. of all Taxes) 
                       		 <%}%>
-			 </div>
+			             </div>
+                         <% if (data.CompanyID !== 379){%>
                         <div <% %>
                             style="text-align: left; font-size:<%= data.productBrandFontSize %>; font-weight: 600; font-family: verdana;margin-left: 18px;">
                               <% if (data.CompanyID !== 63 && data.CompanyID !== 153 && data.CompanyID !== 320){%>
@@ -154,9 +155,83 @@
                             style="text-align: left;  font-size:<%= data.productModelFontSize %>; font-weight: 600; font-family: verdana;margin-left: 18px;">
                             <%=i.ProductModelName%>
                         </div>
+                        <%}%>
+                        <% if (data.CompanyID == 379){%>
+                            <div <% %>
+                            style="text-align: left;  font-size:<%= data.productModelFontSize %>; font-weight: 600; font-family: verdana;margin-left: 18px;">
+                             <%=i.ProductBrandName%> | <%=i.SupplierName%>
+                        </div>
+                        <%}%>
+                    </th>
+                </tr>
+            </table> -->
+
+             <% if (data.CompanyBarcode == 1) {%> 
+
+               <table style="margin-left: -10px; margin-top: -14px;  zoom: 75% !important;  ">
+ 
+                <tr>
+                    <th  style="width: 140px; padding: 0;">
+                        <div
+                            style="font-size: 18px; font-weight: 600; font-family: verdana; text-align: center; margin-top:6px; padding-bottom:1px; height: 22px;">
+                            <% if (i.BarcodeName != ''){%>
+                                <%=i.BarcodeName%>
+                             <%}%>
+                        </div>
+                        <div>
+                            <svg class="barcode" jsbarcode-format="CODE128" jsbarcode-value="<%=i.Barcode%>"
+                                jsbarcode-textmargin="0" jsbarcode-height="45" jsbarcode-marginTop="-15"
+                                jsbarcode-fontSize="22" jsbarcode-marginBottom="0" jsbarcode-width="2"
+                                jsbarcode-fontoptions="bold" >
+                            </svg>
+                            <script>
+                                JsBarcode(".barcode").init();
+                            </script>
+                        </div>
+                    </th>
+                    <th  style="width: 220px;">
+                        <% if (data.MRPHide == 'true'){%>
+                        <div
+                            style="text-align: left; font-size: 22px; font-weight: 600; font-family: verdana; letter-spacing: 0px; margin-left: 18px;">
+                            <% if (data.CompanyID != 2){%>
+                                       MRP  <%=i.RetailPrice%>    
+                              <%}%>
+                            <% if (data.CompanyID == 2){%>
+                                       OMR  <%=i.RetailPrice%>    
+                              <%}%>            
+                        </div>
+ <%}%> 
+                        <div
+                            style="text-align: left; font-size: 14px; font-weight: 600;letter-spacing: 0.1px;margin-left: 18px; font-family: verdana ;">
+                              <% if (data.CompanyID !== 2){%>
+                                (Inc. of all Taxes) 
+                      		 <%}%>
+			 </div>
+              <% if (data.CompanyID !== 379){%>
+                        <div
+                            style="text-align: left; font-size: 16px; font-weight: 600; font-family: verdana;margin-left: 18px;">
+                              <% if (data.CompanyID !== 63 && data.CompanyID !== 153 && data.CompanyID !== 320){%>
+                                 <%=i.ProductBrandName%>
+                            <%}%>
+                            <% if (data.CompanyID === 63 || data.CompanyID == 153 || data.CompanyID == 320){%>
+                                <%=i.ProductUniqueBarcode%>
+                            <%}%>
+                        </div>
+                        <div
+                            style="text-align: left; font-size: 16px; font-weight: 600; font-family: verdana;margin-left: 18px;">
+                            <%=i.ProductModelName%>
+                        </div>
+                         <%}%>
+                          <% if (data.CompanyID == 379){%>
+                            <div <% %>
+                            style="text-align: left;  font-size: 18px;; font-weight: 600; font-family: verdana;margin-left: 18px; padding-top:5px">
+                             <%=i.ProductBrandName%> | <%=i.SupplierName%>
+                        </div>
+                        <%}%>
                     </th>
                 </tr>
             </table>
+            <%}%>
             <%}%>
 
 
