--- a/relinksys/web/src/app/inventory/pre-order/pre-order.component.html
+++ b/relinksys/web/src/app/inventory/pre-order/pre-order.component.html
@@ -124,7 +124,7 @@
                                                     </ngx-mat-select-search>
                                                 </mat-option>
                                                 <mat-option *ngFor="let val of spec.SptFilterData | proditemfilterPurchase: spec.EnteredValue "
-                                                    [value]="val.TableValue">
+                                                    [value]="val.TableValue1">
                                                     {{val.TableValue}}
                                                 </mat-option>
                                             </mat-select>
