--- a/relinksys/web/src/app/po/quotation/quotation.component.html
+++ b/relinksys/web/src/app/po/quotation/quotation.component.html
@@ -131,7 +131,7 @@
                                                     </ngx-mat-select-search>
                                                 </mat-option>
                                                 <mat-option *ngFor="let val of spec.SptFilterData | productitemfilterq: spec.EnteredValue"
-                                                    [value]="val.TableValue">
+                                                    [value]="val.TableValue1">
                                                     {{val.TableValue}}
                                                 </mat-option>
                                             </mat-select>
