--- a/relinksys/web/src/app/report/old-sale/old-sale.component.html
+++ b/relinksys/web/src/app/report/old-sale/old-sale.component.html
@@ -319,7 +319,7 @@
                                                             </mat-option>
                                                             <mat-option
                                                                 *ngFor="let val of spec.SptFilterData | productitemfilter: spec.EnteredValue"
-                                                                [value]="val.TableValue">
+                                                                [value]="val.TableValue1">
                                                                 {{val.TableValue}}
                                                             </mat-option>
                                                         </mat-select>
