--- a/relinksys/web/src/app/sale/order-sale/order-sale.component.html
+++ b/relinksys/web/src/app/sale/order-sale/order-sale.component.html
@@ -245,7 +245,7 @@
                                         <mat-option value=""> </mat-option>
                                         <mat-option
                                             *ngFor="let val of spec.SptFilterData | proditemfilterbill: spec.EnteredValue "
-                                            [value]="val.TableValue">
+                                            [value]="val.TableValue1">
                                             {{val.TableValue}}
                                         </mat-option>
                                     </mat-select>
