--- a/relinksys/web/src/app/inventory/physical-stock/physical-stock.component.html
+++ b/relinksys/web/src/app/inventory/physical-stock/physical-stock.component.html
@@ -82,7 +82,7 @@
                                                 <mat-option>
                                                 </mat-option>
                                                 <mat-option *ngFor="let val of spec.SptFilterData "
-                                                    [value]="val.TableValue">
+                                                    [value]="val.TableValue1">
                                                     {{val.TableValue}}
                                                 </mat-option>
                                             </mat-select>
