--- a/relinksys/web/src/app/report/inventory-report/inventory-report.component.html
+++ b/relinksys/web/src/app/report/inventory-report/inventory-report.component.html
@@ -178,7 +178,7 @@
                               <mat-option>
                               </mat-option>
                               <mat-option *ngFor="let val of spec.SptFilterData | productitemfilter: spec.EnteredValue"
-                                [value]="val.TableValue">
+                                [value]="val.TableValue1">
                                 {{val.TableValue}}
                               </mat-option>
                             </mat-select>
@@ -1004,7 +1004,7 @@
                               <mat-option>
                               </mat-option>
                               <mat-option *ngFor="let val of spec.SptFilterData | productitemfilter: spec.EnteredValue"
-                                [value]="val.TableValue">
+                                [value]="val.TableValue1">
                                 {{val.TableValue}}
                               </mat-option>
                             </mat-select>
@@ -1767,7 +1767,7 @@
                                       <mat-option>
                                       </mat-option>
                                       <mat-option *ngFor="let val of spec.SptFilterData | proditemfilterPurchase: spec.EnteredValue"
-                                          [value]="val.TableValue">
+                                          [value]="val.TableValue1">
                                           {{val.TableValue}}
                                       </mat-option>
                                   </mat-select>
