--- a/relinksys/web/src/app/report/product-return/product-return.component.html
+++ b/relinksys/web/src/app/report/product-return/product-return.component.html
@@ -321,7 +321,7 @@
                               </mat-option>
                                 <mat-option>
                                 </mat-option>
-                                <mat-option *ngFor="let val of spec.SptFilterData | productitemfilter: spec.EnteredValue" [value]="val.TableValue">
+                                <mat-option *ngFor="let val of spec.SptFilterData | productitemfilter: spec.EnteredValue" [value]="val.TableValue1">
                                   {{val.TableValue}}
                                 </mat-option>
                               </mat-select>
