--- a/relinksys/web/src/app/report/purchase-report/purchase-report.component.html
+++ b/relinksys/web/src/app/report/purchase-report/purchase-report.component.html
@@ -349,7 +349,7 @@
                             </mat-option>
                               <mat-option>
                               </mat-option>
-                              <mat-option *ngFor="let val of spec.SptFilterData| productitemfilter: spec.EnteredValue" [value]="val.TableValue">
+                              <mat-option *ngFor="let val of spec.SptFilterData| productitemfilter: spec.EnteredValue" [value]="val.TableValue1">
                                 {{val.TableValue}}
                               </mat-option>
                             </mat-select>
@@ -865,7 +865,7 @@
                             </mat-option>
                               <mat-option>
                               </mat-option>
-                              <mat-option *ngFor="let val of spec.SptFilterData | productitemfilter: spec.EnteredValue" [value]="val.TableValue">
+                              <mat-option *ngFor="let val of spec.SptFilterData | productitemfilter: spec.EnteredValue" [value]="val.TableValue1">
                                 {{val.TableValue}}
                               </mat-option>
                             </mat-select>
@@ -2014,7 +2014,7 @@
                                       <mat-option>
                                       </mat-option>
                                       <mat-option *ngFor="let val of spec.SptFilterData | proditemfilterPurchase: spec.EnteredValue"
-                                          [value]="val.TableValue">
+                                          [value]="val.TableValue1">
                                           {{val.TableValue}}
                                       </mat-option>
                                   </mat-select>
