--- a/relinksys/web/src/app/report/sale-report/sale-report.component.html
+++ b/relinksys/web/src/app/report/sale-report/sale-report.component.html
@@ -769,7 +769,7 @@
                                                             </mat-option>
                                                             <mat-option
                                                                 *ngFor="let val of spec.SptFilterData | productitemfilter: spec.EnteredValue"
-                                                                [value]="val.TableValue">
+                                                                [value]="val.TableValue1">
                                                                 {{val.TableValue}}
                                                             </mat-option>
                                                         </mat-select>
@@ -1713,7 +1713,7 @@
                                                             </mat-option>
                                                             <mat-option
                                                                 *ngFor="let val of spec.SptFilterData | productitemfilter: spec.EnteredValue"
-                                                                [value]="val.TableValue">
+                                                                [value]="val.TableValue1">
                                                                 {{val.TableValue}}
                                                             </mat-option>
                                                         </mat-select>
@@ -2328,7 +2328,7 @@
                                                             </mat-option>
                                                             <mat-option
                                                                 *ngFor="let val of spec.SptFilterData | productitemfilter: spec.EnteredValue"
-                                                                [value]="val.TableValue">
+                                                                [value]="val.TableValue1">
                                                                 {{val.TableValue}}
                                                             </mat-option>
                                                         </mat-select>
@@ -2801,7 +2801,7 @@
                                                             </mat-option>
                                                             <mat-option
                                                                 *ngFor="let val of spec.SptFilterData | productitemfilter: spec.EnteredValue"
-                                                                [value]="val.TableValue">
+                                                                [value]="val.TableValue1">
                                                                 {{val.TableValue}}
                                                             </mat-option>
                                                         </mat-select>
