--- a/relinksys/web/src/app/report/transfer-product-report/transfer-product-report.component.html
+++ b/relinksys/web/src/app/report/transfer-product-report/transfer-product-report.component.html
@@ -125,7 +125,7 @@
                                                     <mat-option>
                                                     </mat-option>
                                                     <mat-option *ngFor="let val of spec.SptFilterData | productitemfilter: spec.EnteredValue"
-                                                        [value]="val.TableValue">
+                                                        [value]="val.TableValue1">
                                                         {{val.TableValue}}
                                                     </mat-option>
                                                 </mat-select>
