--- a/relinksys/web/src/app/report/cash-collection/cash-collection.component.html
+++ b/relinksys/web/src/app/report/cash-collection/cash-collection.component.html
@@ -244,7 +244,7 @@
                                 </table>
                                 </div>
                                 <div  class="col-sm-12" *ngIf="dataList.length != 0">
-                                <table id="print-content" class="table table-striped table-hover table-sm table-bordered"
+                                <table  class="table table-striped table-hover table-sm table-bordered"
                                     style="border: 2px solid #ff1d1d !important; width: 100%;" id="CaseConExcel">
                                     <thead >
                                         <tr>
